Fix download as PNG button

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<h1>Universal LPC Spritesheet Generator</h1>
 			<p>Free/Libre pixel art sprites from the <a href="lpc.opengameart.org">Liberated Pixel Cup</a> and <a href="https://opengameart.org/content/lpc-collection">OpenGameArt.org</a>. License: <a href="https://creativecommons.org/licenses/by-sa/3.0/">CC-BY-SA 3.0</a>. You must <a id="scroll-to-credits" href="#">credit the authors of this artwork.</a></p>
 			<div>
-				<button id="saveAsPNG">Download As PNG</button>
+				<a id="saveAsPNG"><input type="button" value="Download As PNG"></a>
 				<button type="button" class="generateSheetCredits">Download credits</button>
 			</div>
 			<div>
