Add compact display mode, allow arbitrary nesting levels to be collapsed

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 				<button type="button" id="expand">Expand Selected</button>
 				<button type="button" id="resetAll">Reset all</button>
 				<button type="button" class="replacePinkMask">Replace Mask (pink)</button>
+				<label for="displayMode-compact"><input type="checkbox" name="displayMode" value="compact" id="displayMode-compact"> Compact Display</label>
 			</div>
 			<div>
 				<input type="search" id="searchbox" name="" placeholder="Search" />
