Allow for mirrored frames inside custom animation definitions

--- a/source_index.html
+++ b/source_index.html
@@ -11,6 +11,7 @@
 	<script type="text/javascript" src="jhash-2.1.min.js"></script>
 	<script type="text/javascript" src="sources/custom-animations.js"></script>
 	<script type="text/javascript" src="sources/chargen.js"></script>
+	<script type="text/javascript" src="sources/image-flip.js"></script>
 </head>
 <body>
 	<form id="customizeChar">
