Create an option to switch the sprite facing order

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- THIS FILE IS AUTO-GENERATED. PLEASE DONT ALTER IT MANUALLY -->
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="en-us" xmlns="http://www.w3.org/1999/html">
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
@@ -27,6 +27,17 @@
 			<div>
 				<label class="control-label">Import/Export:</label>
 				<button type="button" class="exportToClipboard">Export to Clipboard (JSON)</button>
+			</div>
+			<div>
+				<label class="control-label">Facing Order:</label>
+				<label>
+					<input type="radio" id="nwse" name="facing_order" value="nwse" checked />
+					NWSE (default)
+				</label>
+				<label>
+					<input type="radio" id="swen" name="facing_order" value="swen" />
+					SWEN (experimental)
+				</label>
 			</div>
 			<div>
 				<label class="control-label">Edit:</label>
