--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- THIS FILE IS AUTO-GENERATED. PLEASE DONT ALTER IT MANUALLY -->
 <!DOCTYPE html>
-<html lang="en-us" xmlns="http://www.w3.org/1999/html">
+<html lang="en-us">
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
