--- a/source_index.html
+++ b/source_index.html
@@ -1235,6 +1235,7 @@
 					<span class="condensed">Shield</span>
 					<ul>
 						div_sheet_shield
+						div_sheet_shield_kite
 						div_sheet_shield_spartan
 						<li data-animations="spellcast,thrust,walk,slash,shoot,hurt,watering">
 							<span class="condensed">Two-engrailed Shield</span>
