--- a/sources/source_index.html
+++ b/sources/source_index.html
@@ -5,6 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
 	<title>Universal LPC Sprite Sheet Character Generator</title>
 	<link rel="stylesheet" type="text/css" href="sources/chargen.css">
+	<script type="text/javascript" src="sources/redirect.js"></script>
 	<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.13.7/underscore-min.js" integrity="sha512-dvWGkLATSdw5qWb2qozZBRKJ80Omy2YN/aF3wTUVC5+D1eqbA+TjWpPpoj8vorK5xGLMa2ZqIeWCpDZP/+pQGQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.string/2.4.0/underscore.string.min.js" integrity="sha512-EtNEjJOVcNyZFlf+g4ZhbYhyqBNBybgfUquvo5+gGSTTZBmm0+yJQXozIz/8qbzcdu0bWwdYQLBb5ROJqVB+Tw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
